project(doglib)
cmake_minimum_required(VERSION 3.15)
find_package(GTest REQUIRED)
#add_definitions(-D_GLIBCXX_DEBUG)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "-pedantic -Wall -Wextra -Wno-sign-compare -Wconversion -Wno-sign-conversion -Werror")
enable_testing()
include_directories(.)

macro(dog_test functor)
    add_executable(test_${functor} test_${functor}.cpp)
    target_link_libraries(test_${functor} GTest::Main)
    gtest_discover_tests(test_${functor})
endmacro()

add_subdirectory(testing)
