add_subdirectory(graph)
# include(GoogleTest)
enable_testing()
include(GoogleTest)
add_subdirectory("/usr/src/gtest" gtest.out)
# find_package(GTest)
include_directories(${GTEST_INCLUDE_DIR})
add_executable(test_common test_common.cpp)
target_link_libraries(test_common gtest_main)
gtest_add_tests(TARGET test_common)