add_subdirectory(graph)
# include(GoogleTest)
enable_testing()
include(GoogleTest)
add_subdirectory("/usr/src/gtest" gtest.out)
# find_package(GTest)
include_directories(${GTEST_INCLUDE_DIR})
add_executable(t_common test_common.cpp)
target_link_libraries(t_common gtest_main)
# add_test(test_common)
gtest_discover_tests(t_common)
# add_test(Name common COMMAND testing/test_common)